--- a/app/views/factory/formula_elements/show.html.erb
+++ b/app/views/factory/formula_elements/show.html.erb
@@ -3,6 +3,7 @@
   <li><%= link_to t(:new, :scope => [:menu]), new_factory_formula_element_path %></li>
   <li class="active"><a href="#"><%= t(:show, :scope => [:menu]) %></a></li>
   <li><%= link_to t(:edit, :scope => [:menu]), edit_factory_formula_element_path(@formula_element) %></li>
+  <li><%= link_to t(:formulas, :scope => [:menu, :formula_element]), formulas_factory_formula_element_path(@formula_element) %></li>
 <% end %>
 
 <div class="row">
