--- a/app/views/factory/formula_elements/show.html.erb
+++ b/app/views/factory/formula_elements/show.html.erb
@@ -4,6 +4,7 @@
   <li class="active"><a href="#"><%= t(:show, :scope => [:menu]) %></a></li>
   <li><%= link_to t(:edit, :scope => [:menu]), edit_factory_formula_element_path(@formula_element) %></li>
   <li><%= link_to t(:formulas, :scope => [:menu, :formula_element]), formulas_factory_formula_element_path(@formula_element) %></li>
+  <li><%= link_to t(:products, :scope => [:menu, :formula_element]), products_factory_formula_element_path(@formula_element) %></li>
 <% end %>
 
 <div class="row">
