--- a/app/views/factory/making_orders/_form.html.erb
+++ b/app/views/factory/making_orders/_form.html.erb
@@ -45,7 +45,7 @@
 
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
-    <%= link_to t(:delete, :scope => [:actions]), factory_making_order_path(@making_order), :method => :delete, :data => {:confirm => t("messages.are_you_sure")}, :class => 'btn btn-danger pull-right' unless @making_order.new_record? -%>
+    <%= link_to t(:cancel, :scope => [:actions]), cancel_factory_making_order_path(@making_order), :method => :post, :data => {:confirm => t("messages.are_you_sure")}, :class => 'btn btn-danger pull-right' unless @making_order.new_record? -%>
   </div>
 <% end %>
 
