--- a/app/views/business/delivery_notes/_form.html.erb
+++ b/app/views/business/delivery_notes/_form.html.erb
@@ -47,5 +47,10 @@
   </div>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+      business_delivery_note_path(@delivery_note),
+      :method => 'delete',
+      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+      :class => 'btn btn-danger pull-right' unless @delivery_note.new_record? %>
   </div>
 <% end %>
