--- a/app/views/business/delivery_notes/show.html.erb
+++ b/app/views/business/delivery_notes/show.html.erb
@@ -1,6 +1,8 @@
-<div class="page-header">
-  <h1><%=t '.title', :default => DeliveryNote.model_name.human %></h1>
-</div>
+<% content_for :secondary_navigation do %>
+  <li><%= link_to t(:index, :scope => [:menu]), business_delivery_notes_path %></li>
+  <li class="active"><%= link_to t(:new, :scope => [:menu]), new_business_delivery_note_path %></li>
+  <li><%= link_to t(:edit, :scope => [:menu]), edit_business_delivery_note_path(@delivery_note) %></li>
+<% end %>
 
 <dl class="dl-horizontal">
   <dt><strong><%= DeliveryNote.human_attribute_name(:client) %>:</strong></dt>
@@ -16,12 +18,12 @@
 <table id="products_list" class="table">
   <thead>
     <tr>
-      <th class=""><%= MakingOrderItem.human_attribute_name :quantity %></th>
-      <th class=""><%= Product.human_attribute_name :id %></th>
-      <th class=""><%= Product.human_attribute_name :formula %></th>
-      <th class=""><%= Product.human_attribute_name :shape %></th>
-      <th class=""><%= Product.human_attribute_name :size %></th>
-      <th class=""><%= Product.human_attribute_name :weight %></th>
+      <th><%= MakingOrderItem.human_attribute_name :quantity %></th>
+      <th><%= Product.human_attribute_name :id %></th>
+      <th><%= Product.human_attribute_name :formula %></th>
+      <th><%= Product.human_attribute_name :shape %></th>
+      <th><%= Product.human_attribute_name :size %></th>
+      <th><%= Product.human_attribute_name :weight %></th>
     </tr>
   </thead>
   <tbody>
@@ -40,11 +42,4 @@
 
 <div class="form-actions">
   <%= links_by_state(@delivery_note) %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-    edit_business_delivery_note_path(@delivery_note), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-    business_delivery_note_path(@delivery_note),
-    :method => 'delete',
-    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-    :class => 'btn btn-danger' %>
 </div>
