--- a/app/views/factory/formula_elements/products.html.erb
+++ b/app/views/factory/formula_elements/products.html.erb
@@ -2,9 +2,13 @@
   <li><%= link_to t(:index, :scope => [:menu]), factory_formula_elements_path %></li>
   <li><%= link_to t(:new, :scope => [:menu]), new_factory_formula_element_path %></li>
   <li><%= link_to t(:show, :scope => [:menu]), factory_formula_element_path(@formula_element) %></li>
-  <li class="active"><a href="#"><%= t(:edit, :scope => [:menu]) %></a></li>
+  <li><%= link_to t(:edit, :scope => [:menu]), edit_factory_formula_element_path(@formula_element) %></li>
   <li><%= link_to t(:formulas, :scope => [:menu, :formula_element]), formulas_factory_formula_element_path(@formula_element) %></li>
-  <li><%= link_to t(:products, :scope => [:menu, :formula_element]), products_factory_formula_element_path(@formula_element) %></li>
+  <li class="active"><%= link_to t(:products, :scope => [:menu, :formula_element]), products_factory_formula_element_path(@formula_element) %></li>
 <% end %>
 
-<%= render 'form' %>
+<ul class="unstyled">
+  <% @formulas.each do |formula| %>
+  <li><%= link_to formula.name, factory_formula_path(formula) %></li>
+  <% end %>
+</ul>
