Imprimir reporte, o exportar a excel, ahh y el boton de imprimir en los highcharts

--- a/app/views/factory/formula_elements/report.html.erb
+++ b/app/views/factory/formula_elements/report.html.erb
@@ -16,7 +16,7 @@
     <% @formula_elements.each do |formula_element| %>
       <tr>
         <td><%= formula_element.formula_element_name %></td>
-        <td class="amount"><%= formula_element.consumed_stock.ceil %> Kg</td>
+        <td class="amount"><%= number_with_precision formula_element.consumed_stock %> Kg</td>
       </tr>
     <% end %>
   </tbody>
@@ -26,9 +26,13 @@
         <h4>Total</h4>
       </td>
       <td class="amount">
-         <b><%= @formula_elements.inject(0.0){|sum, item| sum = sum + item.consumed_stock}.round %> Kg</b>
+         <b><%= number_with_delimiter @formula_elements.inject(0.0){|sum, item| sum = sum + item.consumed_stock}.round %> Kg</b>
       </td>
     </tr>
   </tfoot>
 </table>
 
+<div class="well">
+  <%= link_to t(:print, :scope => :actions), report_factory_formula_elements_path(:format => :pdf), :class => 'btn btn-large btn-success' %>
+  <%= link_to t(:export, :scope => :actions), report_factory_formula_elements_path(:format => :csv), :class => 'btn btn-large btn-success' %>
+</div>
