Arreglando el perno del wkhtmltopdf

--- a/app/views/factory/making_orders/pdf/_adjustment.pdf.erb
+++ b/app/views/factory/making_orders/pdf/_adjustment.pdf.erb
@@ -1,4 +1,4 @@
-<table class="full">
+<table class="full" style="page-break-before: always;">
   <tbody>
     <tr>
       <th class="title"><span class="highlight">R</span>ectificación / Liberación</th>
