--- a/app/views/factory/making_orders/pdf/_pressing.pdf.erb
+++ b/app/views/factory/making_orders/pdf/_pressing.pdf.erb
@@ -38,7 +38,7 @@
               <td class="amount">Canti</td>
               <td>Forma</td>
               <td>Medida</td>
-              <td>Presión</td>
+              <td>Presion</td>
               <td>Peso(kg)</td>
             </tr>
           </thead>
