--- a/app/views/factory/making_orders/show.pdf.erb
+++ b/app/views/factory/making_orders/show.pdf.erb
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Making Order</title>
-    <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
+    <%= wicked_pdf_stylesheet_link_tag "application" -%>
   </head>
   <body class="printing" style="padding-top:0">
     <div class="block">
