--- a/app/views/business/clients/show.html.erb
+++ b/app/views/business/clients/show.html.erb
@@ -19,5 +19,41 @@
       <td><b><%= Client.human_attribute_name(:address) %></b></td>
       <td><%= @client.address %></td>
     </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:zip_code) %></b></td>
+      <td><%= @client.zip_code %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:state) %></b></td>
+      <td><%= @client.state %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:country) %></b></td>
+      <td><%= @client.country %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:phone_one) %></b></td>
+      <td><%= @client.phone_one %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:phone_two) %></b></td>
+      <td><%= @client.phone_two %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:email_one) %></b></td>
+      <td><%= @client.email_one %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:balance) %></b></td>
+      <td><%= @client.balance %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:admission_date) %></b></td>
+      <td><%=l @client.admission_date, format: :short %></td>
+    </tr>
+    <tr>
+      <td><b><%= Client.human_attribute_name(:client_type) %></b></td>
+      <td><%= @client.client_type_name %></td>
+    </tr>
   </tbody>
 </table>
