--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,6 @@
  *= require bootstrap_and_overrides
  *= require chosen
  *= require jquery-ui-1.8.21.custom
- *= require pdf
  *= require_tree .
+ *= require print
 */
