Remove pdf from making_orders

--- a/app/views/factory/making_orders/pdf/_adjustment.html.erb
+++ b/app/views/factory/making_orders/pdf/_adjustment.html.erb
@@ -120,7 +120,7 @@
         <p class="note">Tolerancia en medida +/- 0.5mm</p>
       </td>
       <td class="smaller-as-it-can nowrap">
-        <p class="note"><%= form_id_and_revision %></p>
+        <p class="note"><%= @revision_id %></p>
       </td>
     </tr>
   </tbody>
