--- a/app/views/factory/making_orders/pdf/_mix.html.erb
+++ b/app/views/factory/making_orders/pdf/_mix.html.erb
@@ -116,7 +116,7 @@
         <p class="note">Tolerancia en peso +/- 5g</p>
       </td>
       <td class="smaller-as-it-can nowrap">
-        <p class="note"><%= form_id_and_revision %></p>
+        <p class="note"><%= @revision_id %></p>
       </td>
     </tr>
   </tbody>
