--- a/app/views/factory/making_orders/pdf/_archive.html.erb
+++ b/app/views/factory/making_orders/pdf/_archive.html.erb
@@ -109,7 +109,7 @@
           Tolerancia en medida +/- 0.5mm</p>
       </td>
       <td class="smaller-as-it-can nowrap">
-        <p class="note"><%= form_id_and_revision %></p>
+        <p class="note"><%= @revision_id %></p>
       </td>
     </tr>
   </tbody>
